# backend/docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  github_com_Cakra17_imphnen_internal_models.AuthPayload:
+  models.AuthPayload:
     properties:
       email:
         type: string
@@ -12,35 +12,57 @@ definitions:
     - email
     - password
     type: object
-  github_com_Cakra17_imphnen_internal_models.SessionResponse:
+  models.RegisterPayload:
+    properties:
+      email:
+        type: string
+      firstname:
+        type: string
+      lastname:
+        type: string
+      password:
+        maxLength: 20
+        minLength: 8
+        type: string
+    required:
+    - email
+    - firstname
+    - lastname
+    - password
+    type: object
+  models.SessionResponse:
     properties:
       user:
-        $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.User'
+        $ref: '#/definitions/models.User'
     type: object
-  github_com_Cakra17_imphnen_internal_models.Token:
+  models.Token:
     properties:
       access_token:
         type: string
     type: object
-  github_com_Cakra17_imphnen_internal_models.User:
+  models.User:
     properties:
       created_at:
         type: string
       email:
         type: string
+      firstname:
+        type: string
       id:
+        type: string
+      lastname:
         type: string
       password_hash:
         type: string
     type: object
-  github_com_Cakra17_imphnen_internal_models.UserResponse:
+  models.UserResponse:
     properties:
       token:
-        $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.Token'
+        $ref: '#/definitions/models.Token'
       user:
-        $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.User'
+        $ref: '#/definitions/models.User'
     type: object
-  github_com_Cakra17_imphnen_internal_utils.Response:
+  utils.Response:
     properties:
       data: {}
       message:
@@ -65,7 +87,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.AuthPayload'
+          $ref: '#/definitions/models.AuthPayload'
       produces:
       - application/json
       responses:
@@ -73,16 +95,16 @@ paths:
           description: Login successful with access token
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.UserResponse'
+                  $ref: '#/definitions/models.UserResponse'
               type: object
         "400":
           description: Invalid request data or wrong password
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -91,7 +113,7 @@ paths:
           description: User not found
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -100,7 +122,7 @@ paths:
           description: Failed to generate token
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -119,7 +141,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.AuthPayload'
+          $ref: '#/definitions/models.RegisterPayload'
       produces:
       - application/json
       responses:
@@ -127,7 +149,7 @@ paths:
           description: Account created successfully
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -136,7 +158,7 @@ paths:
           description: Invalid request data
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -145,7 +167,7 @@ paths:
           description: Email already registered
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -154,7 +176,7 @@ paths:
           description: Internal server error
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -174,16 +196,16 @@ paths:
           description: Session valid with user data
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_Cakra17_imphnen_internal_models.SessionResponse'
+                  $ref: '#/definitions/models.SessionResponse'
               type: object
         "401":
           description: Unauthorized - invalid or missing token
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
@@ -192,7 +214,7 @@ paths:
           description: User not found
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_Cakra17_imphnen_internal_utils.Response'
+            - $ref: '#/definitions/utils.Response'
             - properties:
                 message:
                   type: string
